<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <View
        android:id="@+id/shape_logo"
        style="@style/logo"
        android:background="@drawable/shape_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        style="@style/image_logo"
        android:contentDescription="@string/main_img_description"
        app:layout_constraintBottom_toBottomOf="@+id/shape_logo"
        app:layout_constraintEnd_toEndOf="@+id/shape_logo"
        app:layout_constraintStart_toStartOf="@+id/shape_logo"
        app:layout_constraintTop_toTopOf="@+id/shape_logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/msg_H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/anta"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shape_logo" />

    <TextView
        android:id="@+id/msg_H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_subtitle"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_H1" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button_main"
        android:layout_marginTop="45dp"
        android:text="@string/main_login_button"
        app:cornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_H2"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp" />

    <TextView
        android:id="@+id/msg_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_info"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/msg_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_help"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_info" />

</androidx.constraintlayout.widget.ConstraintLayout>