<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context="org.jvrb.java.activities.ManageActivity">


    <TextView
        android:id="@+id/msg_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/anta"
        android:text="@string/manage_welcome"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg_dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/anta"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_separator"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_welcome" />

    <View
        android:id="@+id/section_account"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:background="@color/medium_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_separator" />

    <TextView
        android:id="@+id/msg_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/manage_account"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/section_account"
        app:layout_constraintTop_toTopOf="@+id/section_account" />

    <ImageView
        android:id="@+id/icon_account"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/manage_img_description"
        app:layout_constraintStart_toEndOf="@+id/msg_account"
        app:layout_constraintTop_toTopOf="@+id/section_account"
        app:srcCompat="@drawable/account_balance" />

    <TextView
        android:id="@+id/msg_account_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/section_account"
        app:layout_constraintStart_toStartOf="@+id/section_account"
        app:layout_constraintTop_toBottomOf="@+id/msg_account" />

    <TextView
        android:id="@+id/msg_account_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/section_account"
        app:layout_constraintEnd_toEndOf="@+id/section_account"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/section_account" />

    <View
        android:id="@+id/border_bottom"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_account" />

    <EditText
        android:id="@+id/ipt_amount"
        style="@style/input"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_input"
        android:ems="10"
        android:hint="@string/manage_input_hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border_bottom" />

    <Button
        android:id="@+id/btn_deposit"
        style="@style/button_manage"
        android:layout_marginTop="35dp"
        android:text="@string/manage_button_deposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipt_amount" />

    <Button
        android:id="@+id/btn_extract"
        style="@style/button_manage"
        android:layout_marginTop="20dp"
        android:text="@string/manage_button_extract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_deposit" />

    <Button
        android:id="@+id/btn_close_sesion"
        style="@style/button_manage"
        android:layout_marginTop="20dp"
        android:text="@string/manage_button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_extract" />

    <TextView
        android:id="@+id/msg_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/manage_minimum_balance"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close_sesion" />

</androidx.constraintlayout.widget.ConstraintLayout>